# babel-edtf

./: .editorconfig  .git-blame-ignore-revs  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
babel_edtf/: __init__.py  version.py
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
tests/: conftest.py  test_api.py  test_package.py
