# SPDX-FileCopyrightText: 2020-2024 CERN.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "babel-edtf"
description = "Localization of Extended Date Time Format level 0 strings."
readme = "README.rst"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "babel",
  "edtf",
  "l10n",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "babel>=2.12",
  "edtf>=5.0.0,<6.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/inveniosoftware/babel-edtf"

[project.optional-dependencies]
docs = [
  "sphinx>=5",
]
tests = [
  "check-manifest>=0.42",
  "coverage>=5.3,<6",
  "pytest-black>=0.6.0",
  "pytest-cov>=2.10.1",
  "pytest-isort>=1.2.0",
  "pytest-pydocstyle>=2.3.2",
  "pytest>=7,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "babel_edtf/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/babel_edtf",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--isort --pydocstyle --black --doctest-glob="*.rst" --doctest-modules --cov=babel_edtf --cov-report=term-missing'
testpaths = "docs tests babel_edtf"
live_server_scope = "module"
