# -*- coding: utf-8 -*-
#
# Copyright (C) 2020 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Babel-EDTF is free software; you can redistribute it and/or modify it under
# the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = babel-edtf
version = attr: babel_edtf.__version__
description = "Localization of Extended Date Time Format level 0 strings."
long_description = file: README.rst, CHANGES.rst
keywords = babel l10n edtf
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/babel-edtf
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Babel>=2.8
    edtf>=4.0.1

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    check-manifest>=0.42
    coverage>=5.3,<6
    pytest-cov>=2.10.1
    pytest-isort>=1.2.0
    pytest-pydocstyle>=2.2.0
    pytest>=6,<7
    sphinx>=4.5
# Kept for backwards compatibility
docs =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = babel_edtf/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = babel_edtf/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = babel_edtf/translations/messages.pot
output-dir = babel_edtf/translations/

[update_catalog]
input-file = babel_edtf/translations/messages.pot
output-dir = babel_edtf/translations/

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=babel_edtf --cov-report=term-missing
testpaths = docs tests babel_edtf
